# TurnBasedRPG

./: CMakeLists.txt  README.md
App/: Config.h  main.cpp
Engine/core/: Core.cpp  Core.h  Surface.h  Window.h
Engine/glfw/: WindowHandler.cpp  WindowHandler.h
Engine/utilities/: Quad.h  TextureImage.cpp  TextureImage.h
Engine/wgpu/buffer/: IndexBuffer.cpp  IndexBuffer.h  UniformBuffers.cpp  UniformBuffers.h  VertexBuffer.cpp  VertexBuffer.h
Engine/wgpu/pipelines/: Quad2DPipeline.cpp  Quad2DPipeline.h
Engine/wgpu/renderers/: Quad2DRenderPass.h  SurfaceRecycler.cpp  SurfaceRecycler.h
Engine/wgpu/system/: Adapter.h  Device.h  Queue.h  Surface.h  SurfaceHandler.cpp  SurfaceHandler.h
src/: main.cpp
src/gpu/: WebGPUAdapter.cpp  WebGPUAdapter.h  WebGPUContext.cpp  WebGPUContext.h  WebGPUDevice.cpp  WebGPUDevice.h
